clang/test/BSC/Negative/Method/BuiltInType/int_instance_function_many_arguments/int_instance_function_many_arguments.cbs
// RUN: %clang_cc1 -verify %s

void int::increase(int* this) { // expected-note {{'increase' declared here}}
    *this = *this +1;
}

int main() {
    int x = 1;
    x.increase(&x); // expected-error {{too many arguments to function call, expected 0, have 1}}
    return 0;
}